src/content/docs/v20/c-api/math.md
---
title: "2.17. 수학 연산"
---

### MC_mathSin100

**프로토타입**

```c
M_Int32 MC_mathSin100(M_Int32 angle)
```

**설명**

지정된 각도의 sin값을 구한 후 그 결과에 100을 곱한 정수값을 리턴합니다.

**매개 변수**

- `angle` - degree단위값

**반환 값**

성공

지정된 각도의 sin값을 구한 후 그 결과에 100을 곱한 정수값
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathCos100

**프로토타입**

```c
M_Int32 MC_mathCos100(M_Int32 angle)
```

**설명**

지정된 각도의 cos값을 구한 후 그 결과에 100을 곱한 정수값을 리턴합니다.

**매개 변수**

- `angle` - degree단위값

**반환 값**

성공

지정된 각도의 cos값을 구한 후 그 결과에 100을 곱한 정수값
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathTan100

**프로토타입**

```c
M_Int32 MC_mathTan100(M_Int32 angle)
```

**설명**

지정된 각도의 tan값을 구한 후 그 결과에 100을 곱한 정수값을 리턴합니다.

**매개 변수**

- `angle` - degree단위값

**반환 값**

성공

지정된 각도의 tan값을 구한 후 그 결과에 100을 곱한 정수값
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathArcSin100

**프로토타입**

```c
M_Int32 MC_mathArcSin100(M_Int32 arc)
```

**설명**

asin의 각도를 정수 값으로 리턴합니다.

**매개 변수**

- `arc` - -100부터 100사이의 각도 sin값에 100을 곱한 값

**반환 값**

성공

- -90에서 90사이의 sin각도 값
실패

- -32767

**부작용**

없음

**참고 항목**

없음

### MC_mathArcCos100

**프로토타입**

```c
M_Int32 MC_mathArcCos100(M_Int32 arc)
```

**설명**

acos의 각도를 정수 값으로 리턴합니다..

**매개 변수**

- `arc` - -100부터 100사이의 각도 cos값에 100을 곱한 값

**반환 값**

성공

- -90에서 90사이의 cos각도 값
실패

- -32767

**부작용**

없음

**참고 항목**

없음

### MC_mathArcTan100

**프로토타입**

```c
M_Int32 MC_mathArcTan100(M_Int32 arc)
```

**설명**

acos의 각도를 정수 값으로 리턴합니다.

**매개 변수**

- `arc` - -100부터 100사이의 각도 tan값에 100을 곱한 값

**반환 값**

성공

- -90에서 90사이의 tan각도 값
실패

- -32767

**부작용**

없음

**참고 항목**

없음

### MC_mathAbs

**프로토타입**

```c
M_Int32 MC_mathAbs(M_Int32 a)
```

**설명**

절대값을 정수로 리턴합니다.

**매개 변수**

- `a` - 절대값을 구하고자 하는 정수값

**반환 값**

성공

절대 정수값
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathMaxN

**프로토타입**

```c
M_Int32 MC_mathMaxN(M_Int32 *a, M_Int32 n)
```

**설명**

n개 정수 값을 비교하여 가장 큰 값을 리턴합니다.

**매개 변수**

- `a` - 연속된 정수 값 저장소의 주소
- `n` - 비교 개수

**반환 값**

성공

n개 값 중 가장 큰 값
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathMinN

**프로토타입**

```c
M_Int32 MC_mathMinN(M_Int32 *a, M_Int32 n)
```

**설명**

n개 정수 값을 비교하여 가장 작은 값을 리턴합니다.

**매개 변수**

- `a` - 연속된 정수 값 저장소의 주소
- `n` - 비교 개수

**반환 값**

성공

n개 값 중 가장 작은 값
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathCheck

**프로토타입**

```c
M_Boolean MC_mathCheck(M_Int32 a, M_Int32 b, M_Int32 c)
```

**설명**

지정된 정수 값이 지정된 범위내에 있는지를 검사하여 그 결과를 리턴한다.

**매개 변수**

- `a` - 검사 시작 값
- `b` - 검사 끝 값
- `c` - 범위 내에 존재하는지 검사하고자 하는 값

**반환 값**

성공

- `TRUE(두` - 값 사이에 있는 경우)
실패

- `FALSE(두` - 값 밖에 있는 경우)

**부작용**

없음

**참고 항목**

없음

### MC_mathRand

**프로토타입**

```c
M_Int32 MC_mathRand(M_Int32 a, M_Int32 b)
```

**설명**

지정된 정수 값의 범위 내에서 random number를 리턴한다.

**매개 변수**

- `a` - lower bound
- `b` - upper bound

**반환 값**

성공

발생된 random number
실패

없음

**부작용**

없음

**참고 항목**

없음

### MC_mathSrand

**프로토타입**

```c
M_Int32 MC_mathSrand (M_Int32 a)
```

**설명**

random seed를 변경한다.

**매개 변수**

- `a` - random number seed value

**반환 값**

없음

**부작용**

없음

**참고 항목**

없음
